--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,11 @@ dist.jlink.output=${dist.jlink.dir}/QLNS
 excludes=
 file.reference.activation.jar=C:\\Users\\ACER\\Desktop\\javax\\activation.jar
 file.reference.commons-codec-1.11.jar=C:\\Users\\ACER\\Downloads\\poi_chaytot\\poi_chaytot\\thuvienpoi\\commons-codec-1.11.jar
+file.reference.commons-codec-1.11.jar-1=..\\..\\..\\Documents\\Zalo Received Files\\poi_chaytot\\poi_chaytot\\thuvienpoi\\commons-codec-1.11.jar
 file.reference.commons-collections4-4.2.jar=C:\\Users\\ACER\\Downloads\\poi_chaytot\\poi_chaytot\\thuvienpoi\\commons-collections4-4.2.jar
+file.reference.commons-collections4-4.2.jar-1=..\\..\\..\\Documents\\Zalo Received Files\\poi_chaytot\\poi_chaytot\\thuvienpoi\\commons-collections4-4.2.jar
 file.reference.commons-compress-1.18.jar=C:\\Users\\ACER\\Downloads\\poi_chaytot\\poi_chaytot\\thuvienpoi\\commons-compress-1.18.jar
+file.reference.commons-compress-1.18.jar-1=..\\..\\..\\Documents\\Zalo Received Files\\poi_chaytot\\poi_chaytot\\thuvienpoi\\commons-compress-1.18.jar
 file.reference.javax.mail.jar=C:\\Users\\ACER\\Desktop\\javax\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\ACER\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\tuann\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
@@ -46,9 +49,13 @@ file.reference.junit-4.6.jar=C:\\Users\\tuann\\Downloads\\jcalendar-1.4\\lib\\ju
 file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\ACER\\Downloads\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.mssql-jdbc-12.2.0.jre8.jar=C:\\jdbc\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre8.jar
 file.reference.poi-4.0.1.jar=C:\\Users\\ACER\\Downloads\\poi_chaytot\\poi_chaytot\\thuvienpoi\\poi-4.0.1.jar
+file.reference.poi-4.0.1.jar-1=..\\..\\..\\Documents\\Zalo Received Files\\poi_chaytot\\poi_chaytot\\thuvienpoi\\poi-4.0.1.jar
 file.reference.poi-ooxml-4.0.1.jar=C:\\Users\\ACER\\Downloads\\poi_chaytot\\poi_chaytot\\thuvienpoi\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar-1=..\\..\\..\\Documents\\Zalo Received Files\\poi_chaytot\\poi_chaytot\\thuvienpoi\\poi-ooxml-4.0.1.jar
 file.reference.poi-ooxml-schemas-4.0.1.jar=C:\\Users\\ACER\\Downloads\\poi_chaytot\\poi_chaytot\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar-1=..\\..\\..\\Documents\\Zalo Received Files\\poi_chaytot\\poi_chaytot\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
 file.reference.xmlbeans-3.0.2.jar=C:\\Users\\ACER\\Downloads\\poi_chaytot\\poi_chaytot\\thuvienpoi\\xmlbeans-3.0.2.jar
+file.reference.xmlbeans-3.0.2.jar-1=..\\..\\..\\Documents\\Zalo Received Files\\poi_chaytot\\poi_chaytot\\thuvienpoi\\xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -67,7 +74,14 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jgoodies-common-1.2.0.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
-    ${file.reference.junit-4.6.jar}
+    ${file.reference.junit-4.6.jar}:\
+    ${file.reference.commons-codec-1.11.jar-1}:\
+    ${file.reference.commons-collections4-4.2.jar-1}:\
+    ${file.reference.commons-compress-1.18.jar-1}:\
+    ${file.reference.poi-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar-1}:\
+    ${file.reference.xmlbeans-3.0.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
